Wed Aug 27 15:06:04 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/error.c: 
	- move lastrc in sql_errors structure
	* src/odbc/odbc.c: small comment fix
	* src/odbc/checkexport.sh vms/odbc_driver_axp.opt:
	* win32/FreeTDS.def:
	- update exports from system that require explicit symbols list

Wed Aug 27 11:53:15 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c:
	- continue merging Steve Murphree patch
	 - SQLColAttribute(s) (fixed)

Tue Aug 26 18:23:45 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: fix silly memory leak

Tue Aug 26 17:50:07 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/odbc.c:
	- continue changing field names
	- correct field type
	- allocate descriptors correctly (still not used very much)
	* src/odbc/odbc_util.c:
	- small fix returning result from store procedures

Tue Aug 26 16:57:11 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/odbc.c src/odbc/odbc_util.c:
	* src/odbc/prepare_query.c src/odbc/sql2tds.c:
	- some header cleanup (do not define IRD, IPD, ARD, APD as types)
	- rename some field (parameter to prepare desc code)

Tue Aug 26 12:14:04 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/odbc.c:
	- continue merging Steve Murphree patch
	 - SQLSetDescField (fixed, quite rewritten)

Mon Aug 25 23:13:41 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: small fix for SQLGetDescField

Sun Aug 24 11:45:29 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/odbc.c:
	- continue merging Steve Murphree patch
	 - SQLGetDescField (fixed)

Sat Aug 23 12:55:38 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c:
	- continue merging Steve Murphree patch
	 - SQLGetInfo (fixed and commented)

Mon Aug 18 20:42:37 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc_util.c: small DATE fix
