@@ -1,3 +1,12 @@
+Thu Aug 28 07:45:55 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
+	* include/tds.h src/odbc/odbc.c src/tds/mem.c:
+	* src/tds/token.c:
+	- Applied Peter Daecon patch
+	 - SQLSetDescField declaration
+	 - SQLGetInfo is not connected return some error
+	 - inizialize correctly some sqlstates in client messages
+	 - add some sqlstates from native errors
+
 Wed Aug 27 15:06:04 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
 	* include/tdsodbc.h src/odbc/error.c: 
 	- move lastrc in sql_errors structure
